--- a/src/main/resources/templates/artistsList.html
+++ b/src/main/resources/templates/artistsList.html
@@ -2,69 +2,56 @@
 <head>
     <meta charset="utf-8">
     <title>Add new Performer to Song</title>
-    <style type = "text/css">
-        body {
-            width: 800px;
-            margin: auto;
-        }
-        table {
-            width:100%;
-        }
-        table, td, th {
-            border: 1px solid black;
-            padding:3px 2px;
-        }
-        section {
-            float: left;
-            margin: 0 1.5%;
-            width: 63%;
-        }
-        aside {
-            float: right;
-            margin: 0 1.5%;
-            width: 30%;
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<header>
-    <h1>Select the Artist to add to the List of Performers </h1>
+<header class="bg-primary text-white text-center py-3">
+    <h1>Select the Artist to Add to the List of Performers</h1>
 </header>
-<section>
-    <h2>Select artist:</h2>
-    <!-- Make changes to this code to dynamically display radio buttons for each artist as in the example -->
-    <form th:method = "post" th:action = "@{/song-details}">
-        <input type="hidden" name="songItem" th:value="${trackID}">
-        <div th:each="artist : ${artists}">
-            <input type="radio" name="artistItem" th:id="${artist.getID()}" th:value="${artist.getID()}">
-            <label th:for="${artist.getID()}" th:text="'First name: '+${artist.getFirstName()}+', Last Name:'+${artist.getLastName()}+', Bio: '+${artist.getBio()}"></label>
-        </div>
-        <input type='submit' value='Add artist'>
-    </form>
-<!--    <input type="radio" name="artistId" value="1"> Axl Rose <br/>-->
-<!--    <input type="radio" name="artistId" value="2"> Jon Bon Jovi <br/>-->
-<!--    <input type="radio" name="artistId" value="3"> David Bowie <br/>-->
-<!--    <br/>-->
+<div class="container my-5">
+    <div class="row">
+        <section class="col-md-8">
+            <h2 class="mb-4">Select Artist:</h2>
+            <form th:method="post" th:action="@{/song-details}">
+                <input type="hidden" name="songItem" th:value="${trackID}">
+                <div class="list-group mb-4">
+                    <div th:each="artist : ${artists}" class="list-group-item">
+                        <input type="radio" name="artistItem" th:id="${artist.getID()}" th:value="${artist.getID()}" class="mr-2">
+                        <label th:for="${artist.getID()}" th:text="'First name: '+${artist.getFirstName()}+', Last Name:'+${artist.getLastName()}+', Bio: '+${artist.getBio()}"></label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Add Artist</button>
+            </form>
 
-<!--    <input type='submit' value='Add artist'>-->
-    <h2>Select artist to see details</h2>
-    <form th:method = "POST" th:action = "@{/artist/details}">
-        <div th:each="artist : ${artists}">
-            <input type="radio" name="artistItem" th:id="${artist.getID()}" th:value="${artist.getID()}">
-            <label th:for="${artist.getID()}" th:text="'First name: '+${artist.getFirstName()}+', Last Name:'+${artist.getLastName()}+', Bio: '+${artist.getBio()}"></label>
-        </div>
-        <input type='submit' value='See details for artist'>
-    </form>
-
-</section>
-<aside>
-    <table>
-        <tr>
-            <!-- change to show selected trackId -->
-            <td><b th:text="${trackID}"></b></td>
-            <td>2</td>
-        </tr>
-    </table>
-</aside>
+            <h2 class="mb-4">Select Artist to See Details</h2>
+            <form th:method="POST" th:action="@{/artist/details}">
+                <div class="list-group mb-4">
+                    <div th:each="artist : ${artists}" class="list-group-item">
+                        <input type="radio" name="artistItem" th:id="${artist.getID()}" th:value="${artist.getID()}" class="mr-2">
+                        <label th:for="${artist.getID()}" th:text="'First name: '+${artist.getFirstName()}+', Last Name:'+${artist.getLastName()}+', Bio: '+${artist.getBio()}"></label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-info btn-block">See Details for Artist</button>
+            </form>
+        </section>
+        <aside class="col-md-4">
+            <table class="table table-bordered">
+                <thead class="thead-dark">
+                <tr>
+                    <th>Track ID</th>
+                    <th>Value</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><b th:text="${trackID}"></b></td>
+                    <td>2</td>
+                </tr>
+                </tbody>
+            </table>
+        </aside>
+    </div>
+</div>
 </body>
 </html>
