--- a/src/main/resources/templates/listSongs.html
+++ b/src/main/resources/templates/listSongs.html
@@ -8,6 +8,11 @@
 <body>
 <header class="bg-primary text-white text-center py-3">
     <h1>Welcome to My Music Store</h1>
+    <div class="text-center mt-4">
+        <a href="/albums" class="btn btn-dark">
+            Show Albums
+        </a>
+    </div>
 </header>
 <main class="container my-5">
     <h2 class="text-center mb-4">Choose a Song:</h2>
